# Project_mama_detector

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  package.json
.claude/: settings.json
.claude/agents/: mama-auditor.md  mama-gobernanza-ia.md  mama-patologo.md  mama-radiologo.md
.claude/commands/: mama-audit.md  mama-gobernanza-ia.md  mama-patologo.md  mama-radiologo.md
.githooks/: commit-msg  test-commit-msg.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: defecto.md  historia.md  tarea.md
.github/workflows/: backend.yml
docs/: alcance-vigente.md  auditoria-alineacion-profesor.md  handoff-estado-y-roadmap.md  handoff-tnm-ajcc8.md  requisitos.md  roadmap-tg.md  runbook.md
docs/adr/: 0001-repo-independiente.md  0002-contratos-json-schema.md  0003-tracking-github-issues.md  0004-alcance-rebanada-vertical.md  0005-orquestacion-multiagente-langgraph.md  0006-estadificacion-tnm-ajcc8-pronostica.md
docs/anteproyecto/: README.md  anteproyecto.docx  propuesta-alcance-tg.md  referencias-apa.md  resumen-requisitos-profesor.md
docs/architecture/: contracts.md  overview.md  phi-and-security.md
docs/clinical/: tnm.md
docs/deployment/: railway.md
docs/psp/: conventions.md  defect-log.md  definition-of-done.md  definition-of-ready.md  post-mortem-template.md  psp-methodology.md  traceability.md
federated/: README.md
infra/: docker-compose.yml
services/histopathology/: CLAUDE.md  Dockerfile  pyproject.toml
services/histopathology/app/: main.py  preprocessing.py
services/histopathology/tests/: test_contract.py
(+28 files in other folders)
