[project]
name = "histopathology-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "mama-contracts"]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
mama-contracts = { path = "../../packages/contracts", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
